--- a/challenge03/style.css
+++ b/challenge03/style.css
@@ -24,6 +24,11 @@ h1{
     
 }
 
+.card-container{
+    display:flex;
+    flex-direction:column;
+
+}
 .cards-wrapper{
     width: 400px;
     margin: 3rem;
@@ -49,16 +54,16 @@ h1{
     /* color:#f5f5f5;*/
     text-align:center;
     border-radius:5%;
-    /* transition:all 2s; */
+    transition:all 2s;
   
 
 }
 
 
 
-/* .card:hover{
+ .card:hover{
     transform:scale(1.1);
-} */
+}
 
 
 
@@ -106,10 +111,15 @@ h1{
 .card-footer{
     margin-bottom:1rem;
 }
-@@media(min-width: 700px) {
+
+@media(min-width: 700px) {
     .container{
         height:100%;
      }
+
+    .card-container{
+        flex-direction:row;    
+    }
    .cards-wrapper{ 
   
     display:flex;
