--- a/challenge01/stylereview.css
+++ b/challenge01/stylereview.css
@@ -14,8 +14,11 @@ h1{
   width:100%;
   height:100vh;
 }
-.checked{
-  color:#f5f5f5;
+.icons{
+  height: 36;
+  width: 36px;
+  stroke: #22b1aa;
+  color: #22b1aa;
 }
 
 .wrapper{
@@ -23,7 +26,13 @@ h1{
   flex-direction:column;
 }
 
-
+.none{
+  height: 36px;
+  width: 36px;
+  color:px;
+  stroke: #22b1aa;
+  color: #22b1aa;
+}
 .card-container{
   border:1px solid black;
   border-radius:0.5rem;
@@ -36,6 +45,7 @@ h1{
 
 .checked{
   color:#22b1aa;
+ 
 }
 .header{
   /* border:1px solid red; */
