--- a/challenge01/stylephoto.css
+++ b/challenge01/stylephoto.css
@@ -18,6 +18,38 @@ body {
     line-height: 1.6; 
   }
 
+/*NAVBAR STYLING*/
+
+  nav-bar{
+    box-shadow:var(--dark-shadow);
+    max-width:var(--max-width);
+    height:5rem;
+    overflow:hidden;
+     /* margin:0 auto; */
+  }
+  
+  .nav-menu li a{
+    text-decoration: none;
+    color: black;
+  }
+  
+   .logo{
+    width:10rem;
+    height:100%;
+    margin:-3px 25rem 10px 4rem;
+   
+  } 
+  .nav-links{
+      /* margin-left:auto; */
+      padding: .1rem .5rem;
+    }
+     
+    .nav-links a:hover{
+       color:var(--turquoise);
+  
+    }
+  
+
 .main__header{
     margin: 4rem 0;
     /* border: 2px solid black; */
@@ -163,3 +195,148 @@ body {
 @media all and (min-width: 960px) {
 
 }
+
+
+
+
+/*Mobile Styling*/
+
+.nav-menu{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom:1rem;
+}
+
+.nav-menu li a{
+  display:block;
+  padding: 1rem 0.2rem;
+  color:var(--greenish-black)
+}
+
+/* .toggle{
+  order:1;
+} */
+
+.nav-links{
+  /* order: 2;
+  width:100%;
+  text-align:center; */
+  display:none;
+}
+
+.active .nav-links{
+  width:100%;
+  height:auto;
+  text-align:center;
+  display:block;
+  margin:-10px  0 10px 0;
+ 
+  
+}
+.active .nav-links:nth-last-child(){
+  padding:0 0 1rem 0;
+}
+/* hamburger styling */
+.hamburger{
+  order:1;
+  display: block;
+  cursor: pointer;
+  justify-content: center;
+
+}
+
+.bar {
+  display: block;
+  width: 35px;
+  height: 5px;
+  margin: -28px 450px 10px 430px;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  background-color: #101010;
+}
+.hamburger.active{
+  padding:5rem;
+ 
+}
+
+.hamburger.active .bar:nth-child(2) {
+  opacity: 0;
+  margin:-28px auto 10px auto;
+}
+
+.hamburger.active .bar:nth-child(1) {
+  margin:-28px auto 10px auto;
+  transform: translateY(-25px) rotate(-45deg);
+  /* transform: rotate(45deg) translate(10px, 10px); */
+}
+
+.hamburger.active .bar:nth-child(3) {
+  margin:-28px auto 10px auto;
+  transform: translateY(0px) rotate(45deg);
+ /* -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(-45deg) translate(15px, -15px); */
+  
+}
+
+
+
+
+/*Tablet Menu*/
+@media all and (min-width: 700px) {
+  .nav-menu {
+      justify-content: center;
+  }
+  .logo {
+      flex: 1;
+      margin:0px 25rem 0px 4rem;
+  } 
+  .nav-links{
+    display:flex;
+    padding-left:1rem;
+  }
+  .hamburger, .bar{
+      /* flex: 1;  */
+       text-align: right;
+        /* order: 2; */
+      display: none;
+  }
+}
+
+
+/* Desktop menu */
+@media all and (min-width: 960px) {
+  .nav-menu {
+      align-items: flex-start;     
+      flex-wrap: nowrap;
+      
+  }
+  .logo {
+     order :0;
+     flex:1;
+     margin:0px 25rem 0px 4rem;
+  } 
+  .nav-links {
+       /* order: 1;  */
+       margin-left:auto;
+       /* display: block;  
+       width: auto; */
+       padding: 0.5rem;
+  }
+  .hamburger, .bar {
+    display: none;
+  }
+  
+ /* .main__para{
+   width:55%;
+   font-size:2.5rem;
+   line-height:1.5;
+ } */
+
+}
+
+
