--- a/challenge01/stylereview.css
+++ b/challenge01/stylereview.css
@@ -89,7 +89,8 @@ h1{
 
 }
 
-@media(min-width:700px){
+
+/* @media(min-width:700px){
   h1{
     text-align:center;
   }
@@ -104,6 +105,7 @@ h1{
     margin: 3rem 3rem 3rem 5rem;
   }
 }
+ */
 
 
 /* #232932
