--- a/challenge01/stylecontacts.css
+++ b/challenge01/stylecontacts.css
@@ -159,12 +159,13 @@ h3,h4{
     margin: 3rem 0;
     height:100%;
     display:flex;
+    flex-wrap:wrap;
     flex-direction:column;
     /* background:#f5f5f5;
     border-radius:5%; */
     border:none;
     outline:none;
-    text-align:center;
+    /* text-align:center; */
     justify-content:center;
     align-items: center;
 }
@@ -176,7 +177,8 @@ h3,h4{
     opacity:1;
    
     padding:5rem ;
-}.contact__phone,.contact__email{
+}
+.contact__phone,.contact__email{
 
 margin-top:5rem;
 }
@@ -314,7 +316,10 @@ margin-top:5rem;
         padding: 3rem;
     
     }
-   
+    .contact__phone,.contact__email{
+
+        margin-top:0rem;
+        }
    input[type="text"]{
        border:4px solid #ffd36a ;
         width:65rem;
