--- a/challenge01/stylecontacts.css
+++ b/challenge01/stylecontacts.css
@@ -3,7 +3,20 @@
     padding:0;
     box-sizing: border-box;
 }
-
+:root{
+    --golden-yellow:#FFD36A;
+    --golden-yellow-1:#fab105;
+    --golden-yellow-2:#ffe5a6;
+    --smokey:#353535;
+    --light-grey:#ebebeb;
+    --smoke-red:#1e1e1e;
+    --light-red:#cccccc;
+    --medium-slateblue:#7b68ee;
+    --white: #FFFFFF;
+    --yellow:#FFFFE0;
+  
+   
+}
 
 html{
     font-size: 62.5%;
@@ -45,7 +58,7 @@ body{
      /* background:#1e1e1e; */
      margin-bottom:2rem;
      
-     color:#FFD36A;
+     color:var(--golden-yellow);
 }
 
 
@@ -53,7 +66,7 @@ body{
     font-size: 4rem;
     font-weight: 700;
     padding:3rem;
-    background-color: #353535;
+    background-color:var(--smokey) ;
     width:30rem;
     text-align:center;
     margin:0 auto;
@@ -65,7 +78,7 @@ body{
 .social__icons{
     
     padding-top:6rem;
-    background-color: #ebebeb;
+    background-color: var(--light-grey);
     /* position:absolute;
     width:40rem;
     z-index:1;  */
@@ -93,7 +106,7 @@ body{
     font-weight: 500;
     line-height: 1.4;
     letter-spacing: 1.6;
-    color:#353535;
+    color:var(--smokey);
 } 
 .message__form { 
     
@@ -103,15 +116,15 @@ body{
     flex-direction:column;
     /* margin:0 auto; */
     border-radius: 5px;
-    background-color:#1e1e1e;
-    color:white;
+    background-color:var(--smoke-red);
+    color:var(--white);
     /* background-color: #f2f2f2; */
     padding: 20px;
 }
 label{
     padding:1.2rem 2rem;
     margin:0 2rem;
-    color:#FFD36A;
+    color:var(--golden-yellow);
     /*margin:1rem 10rem;*/
 }
 input,textarea{
@@ -119,20 +132,20 @@ input,textarea{
     padding:1.2rem 2rem;
     margin:2rem 4rem;
     display:block;
-    border:1px solid #ccc;
+    border:1px solid var(--light-red);
     border-radius:0.4rem;
 
 }
 input[type="submit"]{
     margin:4rem;
-    background:#FFD36A;
+    background:var(--golden-yellow);
 }
 
 input:hover, textarea:hover{
-    border:4px solid #FFD36A ;
+    border:4px solid var(--golden-yellow);
 }
 input[type="submit"]:hover{
-    background:#fab105;
+    background:var(--golden-yellow-1);
 }
 .copyright{
     text-align:center;
@@ -143,7 +156,7 @@ h3,h4{
     text-align:center;
     font-size:2.5rem;
     font-weight: 700;
-    color:mediumslateblue;
+    color:var(--medium-slateblue);
 }
 
 .contact__us{
@@ -173,7 +186,7 @@ h3,h4{
    
     width:100%;
     text-align:center;
-    background:#1e1e1e;
+    background:var(--smoke-red);
     opacity:1;
    
     padding:5rem ;
@@ -183,16 +196,16 @@ h3,h4{
 margin-top:5rem;
 }
 .map__marker p,.contact__phone p,.contact__email p{
-    color:#ffe5a6;
+    color:var(--golden-yellow-2);
 }
 .map__marker:hover,.contact__phone:hover,.contact__email:hover{
-    border:3px solid #fab105;
+    border:3px solid var(--golden-yellow-1);
     opacity:0.8;
     
 }
 
 .footer__section{
-    background-color: #1e1e1e;
+    background-color: var(--smoke-red);
     padding:0.5rem 0;
     
 }
@@ -212,17 +225,17 @@ margin-top:5rem;
     display:flex;
     justify-content: space-between;
     align-items:center;
-    color:#FFD36A ;
+    color:var(--golden-yellow);
 }
 
 .footer__nav{
     text-decoration:none;
-    color:#FFD36A ;
+    color:var(--golden-yellow);
 }
 
 .copyrights{
     text-align:center;
-    color:#FFD36A ;
+    color:var(--golden-yellow);;
 }
 .contact__us i {
     font-size: 30px;
@@ -232,10 +245,10 @@ margin-top:5rem;
     /* color:#0f0f0f; */
     padding:0 2rem;
     /* color:#fffbf0;/ */
-    color:#353535;
+    color:var(--smokey);
 }
 .fas{
-       color:#ffd36a; 
+       color:var(--golden-yellow); 
 }
  .fab {
     font-family: "Font Awesome 5 Free";
@@ -292,7 +305,7 @@ margin-top:5rem;
     .contact__name{
         width:40rem;
         position:absolute;
-        top:4rem;
+        top:0rem;
         z-index:10; 
     }
    .social__icons{
@@ -321,16 +334,16 @@ margin-top:5rem;
         margin-top:0rem;
         }
    input[type="text"]{
-       border:4px solid #ffd36a ;
+       border:4px solid var(--golden-yellow) ;
         width:65rem;
         margin-top:-35rem;
         margin-left:67rem;
     }
     input[type="text"]:hover,  input[type="email"]:hover{
-        border:4px solid#fab105 ;
+        border:4px solid var(--golden-yellow-1);
     }
     input[type="email"]{
-        border:4px solid #ffd36a;
+        border:4px solid var(--golden-yellow);
         width:65rem;
         margin-top:0rem;
         margin-left:67rem;
@@ -342,7 +355,7 @@ margin-top:5rem;
     .map__marker, .contact__phone, .contact__email{
      width:30%;
     text-align:center;
-    background:#1e1e1e;
+    background:var(--smoke-red);
     opacity:1;
     margin-right:5rem;
     padding:5rem;
