--- a/challenge01/stylepricing.css
+++ b/challenge01/stylepricing.css
@@ -4,6 +4,11 @@
     box-sizing:border-box;
 }
 
+:root{
+    --golden-yellow:#FFD36A;
+    --light-smokey-gray:#f5f5f5;
+    --light-blue:#3A3F47;
+}
 body{
     font-size:3rem;
     line-height:1.8;
@@ -36,7 +41,7 @@ h1{
     height:100%;
     display:flex;
     flex-direction:column;
-    background:#f5f5f5;
+    background:var(--light-smokey-gray);
     border-radius:5%;
     border:none;
     outline:none;
@@ -50,7 +55,7 @@ h1{
  .card{
     width:300px;
     height:100%;
-    color:#3A3F47;
+    color:var(--light-blue);
     /* background-color: black;  */
     /* color:#f5f5f5;*/
     text-align:center;
@@ -69,7 +74,7 @@ h1{
 
 
 .cards-wrapper:hover{
-    border:2px solid #FFD36A ;
+    border:2px solid var(--golden-yellow);
     outline:black;
     transform:scale(1.1);
 }
@@ -101,7 +106,7 @@ h1{
 
   .btn{
    width:40%;
-    background:#FFD36A ;
+    background:var(--golden-yellow);
     text-align:center;
     border-radius:10%;
     border:2px solid black;
